Features and fixes
Add the ability to add extra details to direct authentication
Align direct authentication API. POST to allow extra data to be sent
Align parameter deviceId. Should be consistent accross calls
Update README.md to add new information
Remove device id requirement for TOTP demo
