# totp-server/src/main/java/com/quakearts/auth/server/totp/rest/authorization/DeviceAuthorizationService.java
@@ -1,9 +1,10 @@
 package com.quakearts.auth.server.totp.rest.authorization;
 
+import java.util.Map;
 import java.util.function.Consumer;
 import com.quakearts.auth.server.totp.exception.TOTPException;
 
 public interface DeviceAuthorizationService {
-	void requestOTPCode(String deviceId, Consumer<String> callback, Consumer<String> errorCallback) 
+	void requestOTPCode(String deviceId, Map<String, String> authenticationData, Consumer<String> callback, Consumer<String> errorCallback) 
 			throws TOTPException;
 }
